--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "cloudinary-labs/cloudinary-laravel": "^2.2",
         "firebase/php-jwt": "^6.10",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "league/flysystem-ftp": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
