--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "firebase/php-jwt": "^6.10",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
-        "league/flysystem-ftp": "^3.0"
+        "league/flysystem-ftp": "^3.0",
+        "league/flysystem-path-prefixing": "^3.0",
+        "league/flysystem-read-only": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
