--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=Nest
 APP_ENV=local
-APP_KEY=
+APP_KEY="generate key"
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=Asia/Manila
+APP_URL="api url"
+NEST_URL="front url"
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -33,11 +34,25 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=
+FILESYSTEM_URL=
 QUEUE_CONNECTION=database
+
+FTP_HOST=
+FTP_USERNAME=
+FTP_PASSWORD=
+FTP_ROOT=
 
 CACHE_STORE=database
 CACHE_PREFIX=
+
+VERIFICATION_KEY="generate key"
+SESSION_KEY="generate key"
+RESET_KEY="generate key"
+ROLE_KEY="generate key"
+
+TOKEN_ISSUER=
+TOKEN_AUDIENCE=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -46,13 +61,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -62,7 +77,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-SESSION_KEY=
-
-CLOUDINARY_URL=
